"Refactored events to remove some friend class stuff."

--- a/Win33/Win33/Win33.vcxproj
+++ b/Win33/Win33/Win33.vcxproj
@@ -120,7 +120,7 @@
     <ClInclude Include="Win33LabelEvents.h" />
     <ClInclude Include="Win33Menu.h" />
     <ClInclude Include="Win33MenuBar.h" />
-    <ClInclude Include="Win33MenuEvents.h" />
+    <ClInclude Include="Win33MenuItemEvents.h" />
     <ClInclude Include="Win33MenuItem.h" />
     <ClInclude Include="Win33MultilineTextBox.h" />
     <ClInclude Include="Win33PasswordBox.h" />
