--- a/Win33/Win33/Win33.vcxproj
+++ b/Win33/Win33/Win33.vcxproj
@@ -81,6 +81,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Win33Interop.cpp" />
     <ClCompile Include="Win33TrayIcon.cpp" />
     <ClCompile Include="Win33Application.cpp" />
     <ClCompile Include="Win33CheckBox.cpp" />
@@ -105,6 +106,7 @@
     <ClCompile Include="Win33Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Win33Interop.h" />
     <ClInclude Include="Win33TrayIcon.h" />
     <ClInclude Include="Win33Application.h" />
     <ClInclude Include="Win33ButtonEvents.h" />
