--- a/Win33/Win33Examples/Win33Examples.vcxproj
+++ b/Win33/Win33Examples/Win33Examples.vcxproj
@@ -59,6 +59,10 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)Win33Examples\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)Win33Examples\$(Platform)\$(Configuration)\</IntDir>
+    <IncludePath>C:\Users\Corsair\Documents\Visual Studio 2013\Projects\Win33\Win33;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Corsair\Documents\Visual Studio 2013\Projects\Win33\Win33\x64\Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -89,6 +93,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>Win33.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
