Fixed cancellable events + added new example

--- a/Win33/Win33Examples/Win33Examples.vcxproj
+++ b/Win33/Win33Examples/Win33Examples.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="Menus.h" />
     <ClInclude Include="MultipleTrayIcons.h" />
     <ClInclude Include="MultipleWindows.h" />
+    <ClInclude Include="TrayIcon.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
